# AdCompliance_AI

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/scripts/: index_documents.py
backend/src/api/: server.py  telemetry.py
backend/src/graph/: nodes.py  state.py  workflow.py
backend/src/services/: video_indexer.py
frontend/: index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: ComplianceChecker.tsx
frontend/src/pages/: Index.tsx
